# osu-taiko-drum

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x  openocd.gdb
.cargo/: config.toml
3d/: SS_TaikoDrumBody.3mf  SS_TaikoDrumKats.3mf  SS_TaikoDrumStandBack.3mf  SS_TaikoDrumStandFront.3mf  TaikoDrum.blend
openocd/: stlink.cfg
pcb/: TaikoDrum.kicad_pcb  TaikoDrum.kicad_prl  TaikoDrum.kicad_pro  TaikoDrum.kicad_sch  TaikoDrum.kicad_sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
pcb/syms/: MUSB-05-S-B-SM-A.stp
pcb/syms/FSM8JH/: FSM8JH.kicad_sym  SW_FSM8JH.kicad_mod
pcb/syms/LM3940IMPX-3.3_NOPB/: LM3940IMPX-3.3_NOPB.kicad_sym  SOT230P700X180-4N.kicad_mod
pcb/syms/Library.pretty/: MICRO-USB-SMD_5P-P0.65-H-F_C10418.kicad_mod
sim/: piezo_processing.ipynb  requirements.txt
src/: cfg.rs  cross_correlation.rs  hid.rs  lib.rs  logger.rs  main.rs  parser.rs  piezo.rs  prog.rs  usb.rs
util/: taikoctl.tcl
