[package]
name = "TaikoHID"
version = "0.1.0"
edition = "2024"
test = false

[dependencies]
rtic = { version = "2.1.2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
stm32f1 = { version = "0.15.1", features = ["stm32f103"] }

log = "0.4"
panic-custom = "0.1.1"
embedded-hal = "1.0.0"
rtic-sync = "1.3.2"

usbd-hid = "0.8.2"
usb-device = "0.3.2"
stm32-usbd = "0.7.0"

[[bin]]
name = "TaikoHIDFirmware"
path = "./src/main.rs"
test = false
bench = false

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
panic = 'abort'
incremental = false
rpath = false
lto = true
codegen-units = 1
# symbols are nice and they don't increase the size on Flash
debug = true 

[profile.dev]
opt-level = 3
debug-assertions = false
overflow-checks = false
panic = 'abort'
incremental = false
rpath = false
lto = true
codegen-units = 1
debug = true
